# TODO-APP

./: .gitignore  CLAUDE.md  README.md  constitution_roman_urdu.md  gemini_config_with_openai_agents_sdk_guide.py  pyproject.toml
.claude/skills/: error_handler.md  id_architect.md  ux_logic_anchor.md
.specify/memory/: constitution.md
backend/: .env.example  .vercelignore  API_TESTING_GUIDE.md  README.md  config.py  database.py  main.py  pyproject.toml  requirements.txt
backend/alembic/versions/: fix_user_fk_20260120.py
backend/api/: deps.py  tasks.py
backend/core/: security.py
backend/models/: task.py  user.py
backend/schemas/: error.py  task.py
backend/tests/: conftest.py  test_api_auth.py  test_api_tasks.py  test_rest_api_conftest.py
chatbot-backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
chatbot-backend/alembic/: env.py
chatbot-backend/alembic/versions/: 001_create_chat_tables.py
chatbot-backend/app/: config.py  main.py
chatbot-backend/app/auth/: jwt.py
chatbot-backend/app/models/: chat_message.py  chat_thread.py  request_context.py
chatbot-backend/app/server/: chatkit_server.py  gemini_model_for_agent.py
chatbot-backend/app/store/: memory_store.py  neon_store.py
chatbot-backend/app/utils/: agent_factory.py  errors.py  logging.py
frontend/: README.md  middleware.ts  package-lock.json  package.json  test-theme.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/contexts/: ThemeContext.tsx  ToastContext.tsx
frontend/hooks/: useAuth.ts  useToast.ts
frontend/lib/: auth.ts  (+4 more)
src/: todo_app.py
(+137 files in other folders)
